JWT for Api gateway, fix
 500